--- a/static/css/filecontainer.css
+++ b/static/css/filecontainer.css
@@ -1,12 +1,12 @@
 .filecontainer-wrapper{
-    flex:1 0 30%;
     z-index:-1;
-    margin:.5rem .5rem;
-    max-width:270px;
-    max-height:270px;
+    margin:.65rem .65rem;
 }
 .file-content{
     height:210px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
     z-index:-1;
     border-top-left-radius:4px;
     border-top-right-radius:4px;
@@ -17,8 +17,9 @@
     overflow:hidden;
 }
 .file-content img{
-    width:100%;
-    height:100%;
+    flex-shrink:0;
+    min-width:100%;
+    min-height:100%;
 }
 
 .file-info{
@@ -37,11 +38,12 @@
 #file-image{
 }
 .filecontainer-filename{
+    font-family:'Roboto', arial;
     margin-left:1.3rem;
 }
 .fileflex{
     display:flex;
-    flex:1 0 30;
+    justify-content:flex-start;
 
 }
 .container{
@@ -58,4 +60,45 @@
     margin-left:1.2rem;
     border-radius:50%;
     font-size:1.2em;
+}
+.file{
+    max-width:320px;
+    flex:1 0 20%;
+}
+@media (max-width:1200px){
+.filecontainer-wrapper{
+    z-index:-1;
+    margin:.5rem .5rem;
+}
+.file{
+    max-width:260px;
+}
+}
+
+.filesflex{
+    display:flex;
+    flex-wrap:wrap;
+}
+
+.mainwrapper{
+    display:flex;
+    min-height:1200px;
+    flex-direction:column;
+}
+.todaywrapper{
+    display:flex;
+    min-height:400px;
+}
+.afile{
+
+}
+.fileflex{
+    width:100%;
+    display:flex;
+    flex-wrap:wrap;
+}
+.fname{
+    font-family:'Roboto', arial;
+    font-weight:600;
+    color:rgba(0,0,0,.7);
 }
