--- a/static/css/menu-style.css
+++ b/static/css/menu-style.css
@@ -140,6 +140,9 @@
 #fileuploadwrapper{
     pointer-events:auto;
 }
+#formitem{
+    pointer-events:auto;
+}
 #newfolder{
     pointer-events:auto;
 }
