--- a/templates/html/basetable.html
+++ b/templates/html/basetable.html
@@ -204,9 +204,9 @@
    </div>
    <div class="vert"></div>
    <div class="sub-icon-d-wrapper">
-       <a href="/uploads/mydrivetable/">
+       <a href="/uploads/mydrive/">
           <div id="circle">
-          <i class="fas fa-table fa-lg"></i>
+          <i class="fas fa-th fa-lg"></i>
           </div>
         </a>
           <div id="circle">
