--- a/static/css/qafilecontainer.css
+++ b/static/css/qafilecontainer.css
@@ -15,6 +15,7 @@
     align-items:center;
     justify-content:center;
     max-height:120px;
+    min-height:115px;
     border:1px solid rgba(0,0,0,.3);
     border-bottom:none;
 }
@@ -27,7 +28,7 @@
 }
 .qafilea{
     margin:5px;
-    max-width:230px;
+    max-width:245px;
     border-radius:8px;
     
 }
