--- a/templates/my-drive-table.html
+++ b/templates/my-drive-table.html
@@ -1,4 +1,4 @@
-{% extends 'html/base.html' %}
+{% extends 'html/basetable.html' %}
 
 {% load staticfiles %}
 {% block link %}
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="{% static "css/qafilecontainer.css" %}">
 <link rel="stylesheet" href="{% static "css/flexboxgrid.css" %}">
 <link rel="stylesheet" href="{% static "css/fileupload.css" %}">
+<link rel="stylesheet" href="{% static "css/searchresults.css" %}">
     
     <script>  
     $(function(){
@@ -73,8 +74,6 @@ function searchSuccess(data, textStatus, jqXHR){
 {# PHOTOS PAGE SCRIPTS #}
 <script src="{% static 'uploads/js/progress-bar-upload.js' %}"></script>
 
-
-
 {% endblock %}
 {% block content %}
 {% endblock %}
@@ -87,18 +86,18 @@ function searchSuccess(data, textStatus, jqXHR){
         <div class="qafileflex">
         {% for image in qa_list %}
         {% if image.trash == False %}
-        <a href="#" id="q{{image.id}}" class="qafilea" onclick='q(this.id)'>
+        <a href="#" class="qafilea">
             <div class='qawrapper'>
             <div class='qacontent'>
                 {% if 'jpeg' or 'png' or 'jpg' in image.file_type %}
                     <img id="qaimg" src="{% static image.path  %}">
                 {% endif %}
             </div>
-            <div id='qfooterq{{image.id}}'class='qafooter'>
+            <div class='qafooter'>
                 <div class='qafooterwrapper'>
                 <div class='qanamewrapper'>
-                    <i id='qaicon' class="far fa-file-image fa-lg icon qaicon"></i>
-                    <span id="qanameq{{image.id}}"class='qaname'>{{ image.name }}</span>
+                    <i id='qaicon' class="far fa-file-image fa-lg icon"></i>
+                    <span class='qaname'>{{ image.name }}</span>
                 </div>
                 <div class='qadate'>
                     {{ image.modified }}
@@ -117,48 +116,76 @@ function searchSuccess(data, textStatus, jqXHR){
     </div>
     {% endif %}
 
- 
-{% if folder_list %}
-<div>
-<div class="folders-title">Folders</div>
-<div class="folders-wrapper">
-            {% for folder in folder_list %}
-            <a  href="{% url  'subfolder' folder.id %}">
-            <div id="foldercontent-{{ folder.id }}" class="foldercontainer">
-                <i id="folder" class="fas fa-folder fa-lg icon"></i>
-                <span>{{folder.name}}</span>
-            </div>
-            </a>
-            {% endfor %}
-</div>
-</div>
-{% endif %}
 
+    <div id="tablewrapper">
     {% if image_list %}
-    <div class="files-title">Files</div>
-<link rel="stylesheet" href="flexboxgrid.css">
-<div class='flexbox'>
-{% for image in image_list %}
-<div id="f{{image.id}}" class="list-item f-{{image.id}}" onClick='t(this.id)'>
-<a href="#" class="file">
-    <div id='fcontent-{{image.id}}' class="list-content file-content content{{image.id}} file-content" onclick='t()'>
-      <img id="img" src="{% static image.path  %}">
-      <div id="file-infof{{image.id}}"class="list-footer"onclick='t()'>
-          <div id="file-infof{{image.id}}" class='list-icon-wrapper'> 
-            <div class='file-icon-circle'>
-            <i id='file-icon' class="far fa-hdd file-icon"></i>
-            </div>
+    <div id='statictableh' class="searchresultstablewrapper">
+    <div class="searchresultstabletitlewrapper">
+        
+
+        <div class="tablename">
+            <span>Name</span>
         </div>
 
-        <div class='list-footer-name'>
-            <span>{{ image.name }}</span>
+        <div class="tablerightwrapper">
+        <div class="tableowner">
+            <span>Owner</span>
+        </div>
+
+        <div class="tablemodified">
+            <span>Last modified</span>
+        </div>
+
+        <div class="tablefilesize">
+            <span>File size</span>
+        </div>
+        </div>
+
+
+    </div>
+    {% for image in image_list %}
+    <div class="tablerowwrapper">
+        <div class="tablenamecontainer">
+        <div class="tableiconwrapper">
+            <i class="fas fa-image"></i>
+        </div>
+        <div class="tablenamewrapper">
+            <span>{{image.name}}</span>
+        </div>
+        </div>
+
+        <div class="tablerightwrapper">
+            <div class="tablerightowner">
+              
+                {% if image.owner.user.email == me %}
+                <span>me</span>
+                {% else %}
+                <span>{{image.owner.user.emai}}</span>
+                {% endif %}
+             
+            </div>
+
+            <div class="tablerightmodified">
+                <span>{{image.modified}}</span>
+            </div>
+
+            <div class="tablerightfilesize">
+                    {% if image.size %}
+                    <span>{{image.size}}</span>
+                    {% else %}
+                    <span id="dash">-</span>
+                    {% endif %}
+            </div>
+
         </div>
     </div>
-    </div>
-</a>
-  </div>
-  {% endfor %}
+    
+{% endfor %}
+</div>
 {% endif %}
+</div>
+   
+  
     {% if not image_list and not qa_list and not folder_list %}
     <h1>Upload Files/Folders to start</h1>
     {% endif %}
