--- a/templates/subfolder.html
+++ b/templates/subfolder.html
@@ -1,18 +1,236 @@
-{% extends 'html/subfolderbase.html' %}
 
-{% load staticfiles %}
+  
+
+<html>
+<head>
+    {% load static %}
+  {% block js %}
+
+  {% endblock %}
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel=“stylesheet” href=“https://use.fontawesome.com/releases/v5.5.0/css/all.css” integrity=“sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU” crossorigin=“anonymous">
+<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="{% static "css/base.css" %}">
+    <link rel="stylesheet" href="{% static "css/menu-style.css" %}">
+    <link rel="stylesheet" href="{% static "css/userinfo.css" %}">
+    <link rel="stylesheet" href="{% static "css/filecontainer.css" %}">
+    <link rel="stylesheet" href="{% static "css/newfolder.css" %}">
+    <link rel="stylesheet" href="{% static "css/contextmenu.css" %}">
+    <link rel="stylesheet" href="{% static "css/searchui.css" %}">
+
+<script src="{% static "js/contextmenu.js"%}"></script>
+<script src="{% static "js/fileupload.js"%}"></script>
 {% block link %}
-<link rel="stylesheet" href="{% static "css/folders.css" %}">
-<link rel="stylesheet" href="{% static "css/qafilecontainer.css" %}">
-<link rel="stylesheet" href="{% static "css/flexboxgrid.css" %}">
-<link rel="stylesheet" href="{% static "css/fileupload.css" %}">
 {% endblock %}
 
+<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <script>
+            var URL = "{% url 'uploads:my_view_that_updates_pieFact' %}";
+    </script>
 
-{% block content %}
-{% endblock %}
-{% block content1 %}
-{% if folder_list %}
+
+</head>
+
+
+<div class="newfolder-wrapper" id='newfolder-popup'>
+    <div class="newfolder-r">
+        <h3>New folder</h3>
+        <i id="newfolder-close" class="fas fa-times" onClick="newFolderClose()"></i>
+    </div>
+    <div class="newfolder-r1">
+        <form id='newfolderform' method='post' action='/rootfolder/'>
+        <input type="text" name="newfolder-q" class="newfolder-q blueglow">
+        </form>
+    </div>
+    <div class="newfolder-r2">
+        <a href="#" class="close-link" onClick="newFolderClose()"><div class="newfolder-cancel">CANCEL</div></a>
+        <a href="#" class="create-link"><div onclick="document.getElementById('newfolderform').submit();" class="newfolder-create">CREATE</div></a>
+    </div>
+</div>
+ 
+<div class="cover"></div>
+<div class="page" id="page" >
+ {% include 'includes/newmenu.html' %}
+    <div id="new-btn" class="new-btn-wrapper">
+    <div id="new-btn-txt" class="new-btn">
+        <i id="newplus" class="fas fa-plus"></i>
+        <div class="new-btn-wrap">
+            <span>
+            New
+            </span>
+        </div>
+    </div>
+    </div>
+    
+   <div class="nav-ul">
+        <a class="nav-link active" href="/uploads/mydrive/" >
+            <div class="nav-item active">
+                <div class="icon-wrapper">
+                    <i class="far fa-hdd fa-lg"></i>
+                </div>
+                <span>My Drive</span>
+            </div>
+        </a>
+        <a class="nav-link">
+            <div class="nav-item">
+                <div class="icon-wrapper">
+                    <i class="fas fa-share fa-lg"></i>
+                </div>
+                <span>Shared with me</span>
+            </div>
+        </a>
+        <a class="nav-link" href='/uploads/recent/'>
+            <div class="nav-item">
+                <div class="icon-wrapper">
+                    <i class="fas fa-clock fa-lg"></i>
+                </div>
+                <span>Recent</span>
+            </div>
+        </a>
+        <a class="nav-link" href="/starred/">
+            <div class="nav-item">
+                <div class="icon-wrapper">
+                    <i class="far fa-star fa-lg"></i>
+                </div>
+                <span>Starred</span>
+            </div>
+        </a>
+        <a class="nav-link" href="/trash/">
+            <div class="nav-item">
+                <div class="icon-wrapper">
+                    <i class="fas fa-trash fa-lg"></i>
+                </div>
+                <span>Trash</span>
+            </div>
+        </a>
+        <hr class="nav-hr">
+        <a class="nav-link" id="backups">
+            <div class="nav-item">
+                <div class="icon-wrapper">
+                    <i class="fas fa-upload fa-lg"></i>
+                </div>
+                <span>Backups</span>
+            </div>
+        </a>
+        <hr class="nav-hr" />
+        <a class="nav-link">
+            <div class="nav-item">
+                <div class="icon-wrapper">
+                    <i class="far fa-hdd fa-lg"></i>
+                </div>
+                <span>Storage</span>
+            </div>
+        </a>
+
+    </div>
+  </div>
+
+
+  <div class="header">
+      <input id="searchheader" type="text" name='search' class='search'placeholder="&#xF002;    Search Drive" style="font-family:Arial, FontAwesome" />
+      {% include 'includes/searchui.html' %}
+      <div class="header-icon-wrapper">
+          <div id="circle">
+          <i class="far fa-question-circle fa-lg"></i>
+          </div>
+          <div id="cog">
+          <i class="fas fa-cogs fa-lg"></i>
+          </div>
+          <div id="box">
+          <i class="fas fa-th fa-lg"></i>
+          </div>
+      </div>
+      <div class="user-logo-container">
+      <div class="hover" id="user-info-popup">
+      <div class="user-info" onClick='userinfoToggel()'>
+          M
+      </div>
+      </div>
+      </div>
+
+  </div>
+
+
+
+  <div class="subheader">
+     <div id="user-info-p" class="userinfo-wrapper">
+         <div class="userinfo-header">
+             <div class="user-logo">
+                 <span>M</span>
+             </div>
+             <div class="user-details">
+                 <span class="username">Mason Cruse</span>
+                 <span class="email">crusemason1995@gmail.com</span>
+                 <span class="privacy"><a class="privacy-link">Privacy</a></span>
+                 <a class="ether-account-link" href="#"><div class="ether-account">Ether Account</div></a>
+             </div>
+         </div>
+             <div class="userinfo-btn-wrapper">
+                 <a class="add-link" href="#"><div class="add-account">Add Account</div></a>
+                 <a class="signout-link" href="/users/logout/"><div class="signout">Sign out</div></a>
+             </div>
+     </div>
+   <div id="subheader-h">
+   <div id="subheader-header"> 
+{% if parent.parent.name == 'genesis' %}
+    My Drive <a href="/uploads/mydrive">Home Folder</a>
+{% else %}
+    My Drive <a href="/subfolder/{{parent.parent.id}}">{{parent.parent.name}}</a>
+    <a href="/subfolder/{{parent.id}}">{{parent.name}}</a>
+      <a href="/subfolder/{{parent.child.id}}">{{parent.child.id}}</a>
+
+{% endif %}
+   </div>
+   </div>
+   <div class="sub">
+   <div class="sub-wrapper">
+    <div class="sub-header-icon-wrapper">
+          <div id="circle">
+          <i class="fas fa-paperclip fa-lg"></i>
+          </div>
+          <div id="circle">
+          <i class="fas fa-users fa-lg"></i>
+          </div>
+          <div id="circle">
+          <i class="fas fa-eye fa-lg"></i>
+          </div>
+          <a href='#' id='subhtrash'>
+          <div id="circle">
+          <i class="fas fa-trash fa-lg"></i>
+          </div>
+          </a>
+          <div id="circle">
+          <i class="fas fa-ellipsis-v fa-lg"></i>
+          </div>
+  
+    </div>
+   </div>
+
+   </div>
+   <div class="vert"></div>
+   <div class="sub-icon-d-wrapper">
+       <a href="/uploads/mydrivetable/">
+          <div id="circle">
+          <i class="fas fa-table fa-lg"></i>
+          </div>
+        </a>
+          <div id="circle">
+          <i class="far fa-question-circle fa-lg"></i>
+          </div>
+        
+   </div>
+  </div>
+  <div class="content">
+      {% block content %}
+      {% endblock %}
+
+      {% block content1 %}
+      {% if folder_list %}
 <div>
 <div class="folders-title">Folders</div>
 <div class="folders-wrapper">
@@ -54,13 +272,62 @@
   {% endfor %}
 {% endif %}
 </div>
-{% include 'includes/fileupload/fileupload.html' %}      
-{% endblock %}
+{% include 'includes/fileupload/fileupload.html' %} 
+      {% endblock %}
+  </div>
+  <div>
+
+<!-- initially hidden right-click menu -->
+
+<!-- initially hidden right-click menu -->
+    {% include 'includes/filecontext.html' %}
+    {% include 'includes/filecontextfolder.html' %}
+    {% include 'includes/qacontext.html' %}
+  <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
+  <script src="{% static 'js/searchui.js' %}"></script>
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
+<script>
+        var pie = [];
+document.getElementById("filepicker").addEventListener("change", function(event) {
+  let files = event.target.files;
+
+  for (let i=0; i<files.length; i++) {
+    pie.push(files[i].webkitRelativePath);
+    updatePieFact(pie[i]);
+    console.log(pie[i]);
+  };
+}, false);
+function updatePieFact(pieFact){
+    var data = {'pieFact': pieFact};
+    $.post(URL, data, function(response){
+        if(response === 'success'){ console.log('Yay!'); }
+        else{ console.log('Error! :('); }
+    });
+}
+$(document).ready(function(){
+    $('#btnPlus').click(function(){
+        pieFact *= 1.1;
+        updatePieFact();
+    });
+});
+
+
+</script>
+</html>
+
+
+
+
+<link rel="stylesheet" href="{% static "css/folders.css" %}">
+<link rel="stylesheet" href="{% static "css/qafilecontainer.css" %}">
+<link rel="stylesheet" href="{% static "css/flexboxgrid.css" %}">
+<link rel="stylesheet" href="{% static "css/fileupload.css" %}">
+
+
+
 
  {% include 'includes/filecontextfolder.html' %}
-{% block js %}
+
 <script src="{% static "js/bbase.js" %}"></script>
 <script src="{% static "js/fileupload.js" %}"></script>
-{% endblock %}
-  
-
