remove js debug and added subheader arrow

--- a/templates/subfolder.html
+++ b/templates/subfolder.html
@@ -178,7 +178,7 @@
    <div id="subheader-h">
    <div id="subheader-header"> 
 {% if parent.parent.name == 'genesis' %}
-    My Drive <a href="/uploads/mydrive">Home Folder</a>
+    My Drive <i id="subheaderarrow" class="fas fa-angle-right"></i><a href="/uploads/mydrive">Home Folder</a>
 {% else %}
     <div class="subheaderwrapper">
     My Drive 
