fixed more bugs

--- a/templates/recent.html
+++ b/templates/recent.html
@@ -43,7 +43,7 @@
         {% endif %}
     </div>
     {% if week_list %}
-    <div class="files-title">Files</div>
+    <div class="files-title">Week</div>
     {% if image_list %}
 <link rel="stylesheet" href="flexboxgrid.css">
 <div class='flexbox'>
@@ -71,7 +71,7 @@
 </div>
         {% endif %}
 {% if month_list %}
-     <div class="files-title">Files</div>
+     <div class="files-title">Month</div>
     {% if image_list %}
 <link rel="stylesheet" href="flexboxgrid.css">
 <div class='flexbox'>
@@ -100,7 +100,7 @@
 
         {% endif %}
 {% if year_list %}
-     <div class="files-title">Files</div>
+     <div class="files-title">Year</div>
     {% if image_list %}
 <link rel="stylesheet" href="flexboxgrid.css">
 <div class='flexbox'>
