--- a/templates/html/starbasebackup.html
+++ b/templates/html/starbasebackup.html
@@ -2,11 +2,9 @@
 <head>
     {% load static %}
   {% block js %}
-
   {% endblock %}
-<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-<link rel=“stylesheet” href=“https://use.fontawesome.com/releases/v5.5.0/css/all.css” integrity=“sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU” crossorigin=“anonymous">
-<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
+
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -17,50 +15,79 @@
     <link rel="stylesheet" href="{% static "css/filecontainer.css" %}">
     <link rel="stylesheet" href="{% static "css/newfolder.css" %}">
     <link rel="stylesheet" href="{% static "css/contextmenu.css" %}">
-    <link rel="stylesheet" href="{% static "css/searchui.css" %}">
-
-<script src="{% static "js/contextmenu.js"%}"></script>
-<script src="{% static "js/fileupload.js"%}"></script>
+<script src="{% static "js/contextmenustar.js"%}"></script>
 {% block link %}
 {% endblock %}
 
 <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    <script>
-            var URL = "{% url 'uploads:my_view_that_updates_pieFact' %}";
-    </script>
 
 
 </head>
-
-
 <div class="newfolder-wrapper" id='newfolder-popup'>
     <div class="newfolder-r">
         <h3>New folder</h3>
         <i id="newfolder-close" class="fas fa-times" onClick="newFolderClose()"></i>
     </div>
     <div class="newfolder-r1">
-        <form id='newfolderform' method='post' action='/rootfolder/'>
-        <input type="text" name="newfolder-q" class="newfolder-q blueglow">
-        </form>
+        <input type="text" name="newfolder-q" class="newfolder-q">
     </div>
     <div class="newfolder-r2">
         <a href="#" class="close-link" onClick="newFolderClose()"><div class="newfolder-cancel">CANCEL</div></a>
-        <a href="#" class="create-link"><div onclick="document.getElementById('newfolderform').submit();" class="newfolder-create">CREATE</div></a>
+        <a href="#" class="create-link"><div class="newfolder-create">CREATE</div></a>
     </div>
 </div>
  
 <div class="cover"></div>
 <div class="page" id="page" >
- {% include 'includes/newmenu.html' %}
+
+  <div class="nav">
+    <div class="nav-logo-wrapper">
+        <img class="logo" src="{% static "images/logo.png" %}">
+        <span class="logo-txt">Ether</span>
+    </div>
+<div class="new-popup-wrapper" id="new-popup">
+      <div class="new-popup-item" id='newfolder' onclick='newFolder()'>
+          <div class="new-icon-wrapper"><i class="far fa-hdd"></i></div>
+          <span>Folder<span>
+      </div>
+      <hr />
+      <div class="new-popup-item" id="fileuploaditem">
+          <div class="new-icon-wrapper"><i class="far fa-hdd"></i></div>
+          <span>File upload<span>
+     </div>
+      <div class="new-popup-item" id='formitem'>
+          <div class="folderupload-wrapper">
+          <form id="folderuploadform" method="post" action='/uploads/handle_upload/' enctype='multipart/form-data'>
+          <label id="folderupload">
+          <i id='folderuploadicon' class="far fa-hdd"></i>
+          Folder upload
+          </label>
+
+
+<form action="/uploads/handle_upload/" method="POST" enctype='multipart/    form-data' name='folderform'>
+ <input id='filepicker' class='folderuinput' type='file' name='file_field' webkitdirectory            onchange='form.submit()'>
+     </form>
+          </div>
+
+     </div>
+      <hr id="new-hr">
+      <div class="new-popup-item">
+          <div class="new-icon-wrapper"><i class="far fa-hdd"></i></div>
+          <span>Ether Doc<span>
+     </div>
+      <div class="new-popup-item">
+          <div class="new-icon-wrapper"><i class="far fa-hdd"></i></div>
+          <span>Ether Sheets<span>
+     </div>
+      <div class="new-popup-item">
+          <div class="new-icon-wrapper"><i class="far fa-hdd"></i></div>
+          <span>Ether Slides<span>
+     </div>
+  </div>
     <div id="new-btn" class="new-btn-wrapper">
     <div id="new-btn-txt" class="new-btn">
-        <i id="newplus" class="fas fa-plus"></i>
-        <div class="new-btn-wrap">
-            <span>
-            New
-            </span>
-        </div>
+     New
     </div>
     </div>
     
@@ -115,81 +142,22 @@
             </div>
         </a>
         <hr class="nav-hr" />
-        <a class="nav-link-nohover">
-            <div class="nav-item nover">
+        <a class="nav-link">
+            <div class="nav-item">
                 <div class="icon-wrapper">
                     <i class="far fa-hdd fa-lg"></i>
                 </div>
                 <span>Storage</span>
             </div>
         </a>
-          <style>
-#progressbar {
-  background-color: rgba(0,0,0,.15);
- 
-  /* (height of inner div) / 2 + padding */
-width:150px;
 
-}
-.progressbarwrapper{
-  width:150px;
- 
-  margin-left:auto;
-  margin-right:.8rem;
-}
-#progressbar>div {
-  background-color: #1967D2;
-  
-  /* Adjust with JavaScript */
-  height: 4px;
-  
-}
-.progressbartitle{
-  margin-top:7.5px;
-  font-size:.8em;
-  font-family: 'Roboto', Arial;
- width:150px;
-  
-  color:rgba(0,0,0,.7);
-
-}
-.progressbartitle span{
-  width:150px;
-}
-.progressbarlink{
-  width:65%;
-  margin-top:.5rem;
-width:150px;
- 
-}
-.progressbarlink a{
-
-   color:#1967D2;
-   width:150px;
-    font-size:.75em;
-    font-weight: bold;
-   font-family: 'Roboto', Arial;
-}
-</style>
-<div class="progressbarwrapper">
-<div id="progressbar">
-    <div style="width:{{storage}}"></div>
-</div>
-<div class="progressbartitle">
-  <span>{{storage}}MB of 15GB used</span>
-</div>
-<div class="progressbarlink">
-  <a href="#">UPGRADE STORAGE</a>
-</div>
-</div>
     </div>
   </div>
 
 
   <div class="headerwrapper">
   <div class="header">
-      <input id="searchheader" type="text" name='search' class='search'placeholder="&#xF002;    Search Drive" style="font-family:Arial, FontAwesome" />
-      {% include 'includes/searchui.html' %}
+      <input type="text" name='search' class='search'placeholder="&#xF002; Search" style="font-family:Arial, FontAwesome" />
       <div class="header-icon-wrapper">
           <div id="circle">
           <i class="far fa-question-circle fa-lg"></i>
@@ -201,11 +169,9 @@ width:150px;
           <i class="fas fa-th fa-lg"></i>
           </div>
       </div>
-      <div class="user-logo-container">
       <div class="hover" id="user-info-popup">
       <div class="user-info" onClick='userinfoToggel()'>
           M
-      </div>
       </div>
       </div>
 
@@ -263,19 +229,18 @@ width:150px;
    </div>
    <div class="vert"></div>
    <div class="sub-icon-d-wrapper">
-       <a href="/uploads/mydrivetable/">
           <div id="circle">
           <i class="fas fa-table fa-lg"></i>
           </div>
-        </a>
           <div id="circle">
           <i class="far fa-question-circle fa-lg"></i>
           </div>
         
    </div>
   </div>
-  </div>
 
+
+  </div>
   <div class="content">
       {% block content %}
       {% endblock %}
@@ -286,41 +251,112 @@ width:150px;
   <div>
 
 <!-- initially hidden right-click menu -->
+<div class="hide" id="rmenu">
+  <ul>
+    <li>
+      <a href="#">
+          <div class="cm-icon-wrapper">
+            <i id="x" class="fas fa-times "></i>
+          </div>
+          Preview</a>
+    </li>
 
-<!-- initially hidden right-click menu -->
-    {% include 'includes/filecontext.html' %}
-    {% include 'includes/filecontextfolder.html' %}
-    {% include 'includes/qacontext.html' %}
-  <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
-  <script src="{% static 'js/searchui.js' %}"></script>
-  <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    {% block javascript %}
-    {% endblock %}
-<script>
-        var pie = [];
-document.getElementById("filepicker").addEventListener("change", function(event) {
-  let files = event.target.files;
+    <li>
+      <a href="#">
+          <div class="cm-icon-wrapper">
+            <i id="arrows" class="fas fa-arrows-alt"></i>
+          </div>
+          Open with</a>
+    </li>
 
-  for (let i=0; i<files.length; i++) {
-    pie.push(files[i].webkitRelativePath);
-    updatePieFact(pie[i]);
-    console.log(pie[i]);
-  };
-}, false);
-function updatePieFact(pieFact){
-    var data = {'pieFact': pieFact};
-    $.post(URL, data, function(response){
-        if(response === 'success'){ console.log('Yay!'); }
-        else{ console.log('Error! :('); }
-    });
-}
-$(document).ready(function(){
-    $('#btnPlus').click(function(){
-        pieFact *= 1.1;
-        updatePieFact();
-    });
-});
+    <hr>
+
+    <li>
+      <a href="#">
+          <div class="cm-icon-wrapper">
+            <i  class="fas fa-share-square"></i>
+          </div>
+          Share</a>
+    </li>
+
+    <li>
+      <a href="#">
+          <div class="cm-icon-wrapper">
+            <i id="link" class="fas fa-link"></i>
+          </div>
+          Get shareable link</a>
+    </li>
+
+    <li>
+      <a href="#">
+          <div class="cm-icon-wrapper">
+            <i id="folderplus" class="far fa-folder"></i>
+          </div>
+          Show file location</a>
+    </li>
+
+    <li>
+      <a href="#">
+          <div class="cm-icon-wrapper">
+            <i id="folderplus" class="far fa-folder"></i>
+          </div>
+          Move to</a>
+    </li>
+
+    <li id="starred">
+      <a id="addtostar" href="#">
+          <div class="cm-icon-wrapper">
+            <i id="link" class="far fa-star"></i>
+          </div>
+          Remove from starred</a>
+    </li>
 
 
-</script>
+
+    <li>
+      <a href="#">
+          <div class="cm-icon-wrapper">
+            <i id="link" class="fas fa-pencil-alt"></i>
+          </div>
+          Rename</a>
+    </li>
+
+    <hr>
+
+    <li>
+      <a href="#">
+          <div class="cm-icon-wrapper">
+            <i id="link" class="far fa-copy"></i>
+          </div>
+          Make a copy</a>
+    </li>
+
+    <li>
+      <a href="#">
+          <div class="cm-icon-wrapper">
+            <i id="link" class="far fa-hand-paper"></i>
+          </div>
+          Report abuse</a>
+    </li>
+
+    <li>
+      <a href="#">
+          <div class="cm-icon-wrapper">
+            <i id="link" class="fas fa-download"></i>
+          </div>
+          Download</a>
+    </li>
+
+    <hr>
+
+    <li id='trash'>
+      <a id='addtotrash' href="#">
+          <div class="cm-icon-wrapper">
+            <i id="link" class="fas fa-trash"></i>
+          </div>
+          Remove</a>
+    </li>
+
+  </ul>
+</div>
 </html>
