--- a/templates/subfolder.html
+++ b/templates/subfolder.html
@@ -131,6 +131,7 @@
   </div>
 
 
+  <div class="headerwrapper">
   <div class="header">
       <input id="searchheader" type="text" name='search' class='search'placeholder="&#xF002;    Search Drive" style="font-family:Arial, FontAwesome" />
       {% include 'includes/searchui.html' %}
@@ -233,6 +234,8 @@
           </div>
         
    </div>
+  </div>
+
   </div>
   <div class="content">
       {% block content %}
