--- a/static/css/base.css
+++ b/static/css/base.css
@@ -263,12 +263,22 @@ article {
     align-items:center;
     justify-content:center;
 }
-
 #circle{
     margin-right:1rem;
     color:rgba(0,0,0,.7);
     width:47.5px;
     height:47.5px;
+    display:flex;
+    border-radius:50%;
+    align-items:center;
+    justify-content:center;
+}
+
+#circle1{
+    margin-right:1rem;
+    color:rgba(0,0,0,.7);
+    width:40.5px;
+    height:40.5px;
     display:flex;
     border-radius:50%;
     align-items:center;
@@ -281,6 +291,9 @@ article {
     background-color:rgba(0,0,0,.15);
 }
 #circle:hover{
+    background-color:rgba(0,0,0,.15);
+}
+#circle1:hover{
     background-color:rgba(0,0,0,.15);
 }
 #cog:hover{
@@ -327,6 +340,7 @@ article {
 #subheader-h{
 
     display:flex;
+    height:55px;
     align-items:center;
     justify-content:center;
     margin-left:1rem;
