--- a/static/css/basetable.css
+++ b/static/css/basetable.css
@@ -274,6 +274,17 @@ article {
     align-items:center;
     justify-content:center;
 }
+#circle1{
+    margin-right:1rem;
+    color:rgba(0,0,0,.7);
+    width:42.5px;
+    height:42.5px;
+    display:flex;
+    border-radius:50%;
+    align-items:center;
+    justify-content:center;
+}
+#
 #box:hover{
     background-color:rgba(0,0,0,.15);
 }
@@ -281,6 +292,9 @@ article {
     background-color:rgba(0,0,0,.15);
 }
 #circle:hover{
+    background-color:rgba(0,0,0,.15);
+}
+#circle1:hover{
     background-color:rgba(0,0,0,.15);
 }
 #cog:hover{
@@ -327,6 +341,7 @@ article {
 #subheader-h{
 
     display:flex;
+    height:55px;
     align-items:center;
     justify-content:center;
     margin-left:1rem;
