--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -264,11 +264,11 @@ width:150px;
    <div class="vert"></div>
    <div class="sub-icon-d-wrapper">
        <a href="/uploads/mydrivetable/">
-          <div id="circle">
+          <div id="circle1">
           <i class="fas fa-table fa-lg"></i>
           </div>
         </a>
-          <div id="circle">
+          <div id="circle1">
           <i class="far fa-question-circle fa-lg"></i>
           </div>
         
