--- a/templates/html/starbase.html
+++ b/templates/html/starbase.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="{% static "css/contextmenu.css" %}">
     <link rel="stylesheet" href="{% static "css/searchui.css" %}">
 
-<script src="{% static "js/contextmenu.js"%}"></script>
+<script src="{% static "js/contextmenustar.js"%}"></script>
 <script src="{% static "js/fileupload.js"%}"></script>
 {% block link %}
 {% endblock %}
@@ -288,7 +288,7 @@ width:150px;
 <!-- initially hidden right-click menu -->
 
 <!-- initially hidden right-click menu -->
-    {% include 'includes/filecontext.html' %}
+    {% include 'includes/filecontextstar.html' %}
     {% include 'includes/filecontextfolder.html' %}
     {% include 'includes/qacontext.html' %}
   <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
